src2/objects/Action_History_Log__c.object
<CustomObject>
    <description>This log will display the history of actions for the coffee machine, requests, configuration changes, FW updates and any other actions requested from the portal (and logged directly on portal), or requested from the machine and logged on the modem and sent to cloud.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actions History Log</relationshipLabel>
        <relationshipName>Actions_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Type__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Configuration Event</fullName>
                </value>
                <value>
                    <fullName>Connectivity Event</fullName>
                </value>
                <value>
                    <fullName>Machine Event</fullName>
                </value>
                <value>
                    <fullName>Modem Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <description>Is the field over we had done the request</description>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affected_Chassis__c</fullName>
        <formula>IF(ISBLANK(Asset__r.SerialNumber), 
IF(ISBLANK(Asset__c), Asset__c,&apos;Id: &apos;+Asset__c), 
Asset__r.SerialNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affected Chassis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affected_Module__c</fullName>
        <formula>IF(ISBLANK(Asset_Module__r.SerialNumber), 
			IF(ISBLANK(Asset_Module__c), Asset_Module__c,&apos;Id: &apos;+Asset_Module__c), 
			Asset_Module__r.SerialNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affected Module</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Module</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Actions History Log (Asset Module)</relationshipLabel>
        <relationshipName>Actions_History_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <label>Asset Chassis</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Actions History Log</relationshipLabel>
        <relationshipName>Actions_History_Log</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CC_Link__c</fullName>
        <formula>HYPERLINK(&quot;/skyline/s/action-history-log/&quot; &amp; Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CC Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Command Request</fullName>
                </value>
                <value>
                    <fullName>GeneralCounters</fullName>
                    <label>General Counters</label>
                </value>
                <value>
                    <fullName>GeneralParameters</fullName>
                    <label>General Parameters</label>
                </value>
                <value>
                    <fullName>ModemParameters</fullName>
                    <label>Modem Parameters</label>
                </value>
                <value>
                    <fullName>Portal Request</fullName>
                </value>
                <value>
                    <fullName>Setup Menu Data</fullName>
                </value>
                <value>
                    <fullName>SetupParameters</fullName>
                    <label>Setup Parameters</label>
                </value>
                <value>
                    <fullName>Technician Menu Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContractLineItemChassisMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Mirror Chassis</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Actions History Log</relationshipLabel>
        <relationshipName>Actions_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractLineItemModuleMirror__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module Mirror</label>
        <referenceTo>ContractLineItemMirror__c</referenceTo>
        <relationshipLabel>Actions History Log (Contract Line Item Module Mirror)</relationshipLabel>
        <relationshipName>Actions_History_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Line_Item_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Module</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Actions History Log (Contract Line Item Module)</relationshipLabel>
        <relationshipName>Actions_History_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Direction_Indicator__c</fullName>
        <label>Direction Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>From Machine</fullName>
                </value>
                <value>
                    <fullName>To Machine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Current_Account__c</fullName>
        <formula>Account_Id__r.Id =  Asset__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current Account Chassis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Module_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Actions History Log (Module Account)</relationshipLabel>
        <relationshipName>Module_Actions_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NES_ContractLineItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Line Item Chassis</label>
        <referenceTo>ContractLineItem</referenceTo>
        <relationshipLabel>Actions History Log</relationshipLabel>
        <relationshipName>Actions_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <description>Current date-time of the action</description>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <formula>User__r.FirstName  + &apos; &apos; + User__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Actions_History_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Action History Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Action__c</columns>
        <columns>Asset__c</columns>
        <columns>Response__c</columns>
        <columns>Error_Message__c</columns>
        <columns>Asset_Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Action History Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Actions History Log</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>